--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
  "dependencies": {
   "react": "^18.2.0",
   "react-dom": "^18.2.0",
+  "react-scripts": "^5.0.1",
   "framer-motion": "^10.12.16",
   "firebase": "^9.19.0"
 },
@@ -13,4 +14,5 @@
     "build": "react-scripts build"
   }
 }
+
 
