--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "premium-wedding",
+  "name": "wedding-invite",
   "version": "1.0.0",
   "private": true,
- "dependencies": {
-  "react": "^18.2.0",
-  "react-dom": "^18.2.0",
-  "react-scripts": "^5.0.1",
-  "framer-motion": "^10.12.16",
-  "firebase": "^9.19.0"
-},
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "framer-motion": "^10.12.16",
+    "firebase": "^9.19.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build"
   }
 }
-
-
